# LectureAI

./: .rtx.toml  README.md  TODO.md  justfile
backend/: .gitignore  pyproject.toml
backend/backend/: main.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx  Main.tsx
frontend/src/Components/: LectureInfo.tsx  Notes.tsx  ScrollableText.tsx  Titlebar.tsx  VideoPlayer.tsx
