[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ved Kothavade <ved@kothavade.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = { extras = ["standard"], version = "^0.21.1" }
ffmpeg-python = "^0.2.0"
openai = "^0.27.4"
openai-whisper = "^20230314"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]
ignore = [
    "E501", # line too long, handled by black
]
